--- a/css/main.css
+++ b/css/main.css
@@ -3,33 +3,16 @@
 }
  
 .container {
-    width: 428px;
+   
     margin: 0 auto;
-    box-shadow: 2px 1px 20px 20px #98c1d9;
+    
     /* text-align: center; */
 }
 
-.grid {
-    display: grid;
-    padding-left: 15px;
-    padding-right: 15px;
-   
-    grid-template-columns: repeat(4, 77px);
-    grid-column-gap:30px;
-}
 
 
 
-#main-header{
-    grid-column:1/-1;
-    
-        box-shadow: 2px 1px 20px 20px #98c1d9;
-   
-}
-#main-nav {
-    grid-column: 1/-1;
-  
-}
+
 
 #main-nav label img {
 	background: url(../images/burger.svg) center no-repeat;
@@ -84,13 +67,11 @@
  }
 
 
-#header-logo{ 
-    grid-column: 2/-1;
-   
-}
+
 #hero-image{
-    grid-column: 1/-1;
+    
     padding: 0px;
     margin: auto;
     
 }
+#header-logo{ padding-left: 0px;}
