--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,123 @@
-.hidden {
+
+.hidden{ display: none;}
+
+body {
+    font-family: 'Comfortaa', 'Times New Roman', serif;
+ }
+ 
+ a {
+    text-decoration: none;
+    transition: all .5s ease-in-out;
+ }
+ 
+ input, textarea {
+    display: block;
+    margin: 0;
+    padding: 0;
+ }
+ 
+ .cr-red {
+    color: #600783;
+ }
+ 
+ /* 2. ---Main Nav--- */
+ 
+ #main-nav button {
+    width: 30px;
+    height: 30px;
+    background: url(../images/burger-menu.svg) no-repeat center;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    transition: all .5s ease;
+    border: 0;
+    cursor: pointer;
+ }
+ 
+ #main-nav button.expanded {
+    transform: rotate(90deg);
+ }
+ 
+ #burger-con {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: none;
+ }
+ 
+ #burger-con.slide-toggle {
+    display: block;
+ }
+ 
+ #main-nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+ }
+ 
+ #main-nav ul li a {
+    display: block;
+    padding: 10px 0 10px 0;
+    text-align: center;
+    color: #430886;
+ }
+ 
+ #main-nav ul li a:hover {
+    color: #662D91;
+ }
+ 
+ #main-nav ul li {
+    border-bottom: 1px solid #efefef;
+ }
+ 
+ #main-nav ul li:first-child {
+    border-top: 1px solid #efefef;
+ }
+ 
+ #main-nav ul li:last-child {
+    margin-bottom: 10px;
+ }
+ 
+
+ 
+ 
+ 
+ #logo {
+    max-width: 150px;
+    margin-bottom: 10px;
+    margin-left: 130px;
+    margin-top: -50px;
+ }
+ .hidden {
     display: none;
 }
  
 .container {
-   
+    width: 428px;
     margin: 0 auto;
-    
+    box-shadow: 2px 1px 20px 20px #98c1d9;
     /* text-align: center; */
+}
+
+.grid {
+    display: grid;
+    padding-left: 15px;
+    padding-right: 15px;
+   
+    grid-template-columns: repeat(4, 77px);
+    grid-column-gap:30px;
 }
 
 
 
-
-
+#main-header{
+    grid-column:1/-1;
+    
+        box-shadow: 2px 1px 20px 20px #98c1d9;
+   
+}
+#main-nav {
+    grid-column: 1/-1;
+  
+}
 
 #main-nav label img {
 	background: url(../images/burger.svg) center no-repeat;
@@ -66,12 +171,20 @@
     transform: rotate(90deg);
  }
 
+ 
 
+ /**HEADER FINISH MOBILE*/
 
-#hero-image{
-    
+ #hero-image{
     padding: 0px;
-    margin: auto;
+ }
+ 
+
+ #video h2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 42px;
+    text-align: center;
     
-}
-#header-logo{ padding-left: 0px;}
+ }
+ 
