--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,96 @@
 }
  
 
+#main-nav button {
+   width: 30px;
+   height: 30px;
+   background: url(../images/burger-menu.svg) no-repeat center;
+   margin-top: 15px;
+   margin-bottom: 20px;
+   transition: all .5s ease;
+   border: 0;
+   cursor: pointer;
+}
 
+#main-nav button.expanded {
+   transform: rotate(90deg);
+}
+
+#burger-con {
+   margin-top: 20px;
+   margin-bottom: 20px;
+   display: none;
+}
+
+#burger-con.slide-toggle {
+   display: block;
+}
+
+
+#main-header{
+   background-color:gray;
+}
+
+#main-nav ul {
+   list-style: none;
+   padding: 0;
+   margin: 0;
+}
+
+#main-nav ul li a {
+   display: block;
+   padding: 5px 0 10px 0;
+   text-align: center;
+   color: whitesmoke;
+  
+   
+   text-decoration: none;
+   
+}
+
+
+
+#main-nav ul li {
+   border-bottom: 1px solid #efefef;
+}
+
+#main-nav ul li:first-child {
+   border-top: 1px solid #efefef;
+}
+
+#main-nav ul li:last-child {
+   margin-bottom: 10px;
+}
+
+.sign-in {
+   background-color: black;
+   color: #fff;
+   font-size: 16px;
+   
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transition: all 0.3s ease-in-out;
+   cursor: pointer;
+}
+#sign-in-header a{
+   color: white;
+}
+
+.sign-in a:hover {
+   box-shadow: inset 0px -120px 0px white;
+}
+
+#sign-in-header {
+   display: none;
+}
+
+#logo {
+   max-width: 150px;
+   margin-bottom: 10px;
+   margin-left: 130px;
+   margin-top: -30px;
+}
 
  
 
