--- a/css/main.css
+++ b/css/main.css
@@ -256,6 +256,7 @@ padding-bottom: 20px; }
     margin-bottom: 10px;
     font-size: 22px;
     text-align: center;
+
     
  }
 
@@ -265,6 +266,7 @@ padding-bottom: 20px; }
    transition: 0.5s ease-in;
   
  }
+
  
  .new-arrival h2 {
    margin-top: 10px;
@@ -841,8 +843,12 @@ font-size: 30px;
    font-family: Arial, sans-serif;
    text-align: center;
    padding-top: 50px;
+  
  }
+#footer-nav ul li a{
+list-style: none;
 
+}
 
 
 
